[package]
name = "lsr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.1.4", features = ["derive"] }
colored = "2.0.0"
file-owner = "0.1.1"
filetime = "0.2.20"
is_executable = "1.0.1"
termion = "2.0.1"
unix_mode = "0.1.3"
